[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "asymcorr"
version = "0.1.0"
description = "Spearman correlation with asymmetric uncertainties for astrophysical data"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.urls]
Repository = "https://github.com/dominp/asymcorr"